src/main.scss
@import "scss/variables";
@import "scss/media";

.#{$modal-prefix} {
    &.hide, .hide {
        display: none;
    }
    &.fade, .fade {
        opacity: 0;
        transition: opacity .15s linear;
        &.in {
            opacity: 1;
        }
    }
    &-close {
        float: right;
        font-size: ($font-size-base * 1.5);
        font-weight: $close-font-weight;
        color: $close-color;
        background: transparent;
        border: none;
        outline: 0;

        &:hover,
        &:focus {
            color: $close-color;
            text-decoration: none;
            cursor: pointer;
            opacity: .5;
        }

        button {
            padding: 0;
            cursor: pointer;
            background: transparent;
            border: 0;
            -webkit-appearance: none;
        }

        @media #{$tablet} {
            &.outside {
                position: absolute;
                left: 101%;
                top: 0;
            }
        }
    }

    &-open {
        overflow: hidden;
    }

    // display: none;
    overflow: hidden;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: $zindex-modal;
    -webkit-overflow-scrolling: touch;
    outline: 0;

    &.fade .#{$modal-prefix} {
        &-dialog {
            transform: translate(0,-25%);
            transition: transform 0.3s ease-out;
        }
    }

    &.in .#{$modal-prefix} {
        &-dialog {
            transform: translate(0, 0);
        }
    }

    &-open {
        .#{$modal-prefix} {
            overflow-x: hidden;
            overflow-y: auto;
        }
    }

    &-dialog {
        position: relative;
        width: auto;
        width: 100%;
        box-sizing: border-box;
        margin: auto;
        // left: 50%;
        // transform: translateX(-50%);
        @media #{$tablet} {
            width: $modal-md;
            top: 1%;
            // This style will be effect only starting from tablet resolution
            &.#{$modal-prefix} {
                &-sm {
                    width: $modal-sm;
                }

                &-md {
                    width: $modal-md;
                }

                &-lg {
                    width: $modal-lg;
                }
            }
        }
        @media #{$desktop} {
            width: $modal-lg;
        }
    }

    &-content {
        position: relative;;
        background-color: $modal-content-bg;
        background-clip: padding-box;
        outline: 0;
    }

    &-backdrop {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: $zindex-modal-background;
        background-color: $modal-backdrop-bg;
        &.fade {
            opacity: 0;
        }
        &.in {
            opacity: $modal-backdrop-opacity;
        }
    }

    &-header {
        padding: $modal-title-padding;
        .#{$modal-prefix}-close {
            margin-top: -2px;
        }
    }

    &-title {
        margin: 0;
        padding: 0;
        font-size: $modal-title-font-size;
    }

    &-body {
        position: relative;
        padding: $modal-inner-padding;
    }
}

